<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Search Bar -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/spacing_16"
            android:paddingTop="@dimen/spacing_12"
            android:paddingEnd="@dimen/spacing_16"
            android:paddingBottom="@dimen/spacing_12">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bg_surface_container"
                android:queryHint="@string/hint_search_pages" />
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingStart="@dimen/spacing_16"
            android:paddingEnd="@dimen/spacing_16"
            android:paddingBottom="@dimen/spacing_16" />

        <!-- Empty State -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/emptyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/empty_pages"
                android:textColor="@color/on_surface_variant"
                android:textSize="@dimen/text_size_body"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/spacing_24"
        android:contentDescription="@string/action_add"
        app:backgroundTint="@color/primary"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/on_primary" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
